--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -23,10 +23,10 @@
 									<form id="login" class="card-body" tabindex="500">
 										<h3 class="text-dark">Login</h3>
 										<div class="mail">
-											<input type="email" class="form-control" [(ngModel)]="email" id="exampleInputEmail1" [ngModelOptions]="{standalone: true} placeholder="Enter email">
+											<input type="email" class="form-control" [(ngModel)]="email" id="exampleInputEmail1" [ngModelOptions]="{standalone: true}" placeholder="Enter email">
 										</div>
 										<div class="passwd">
-											<input type="password" class="form-control" [(ngModel)]="password" id="exampleInputPassword1" [ngModelOptions]="{standalone: true} placeholder="Password">
+											<input type="password" class="form-control" [(ngModel)]="password" id="exampleInputPassword1" [ngModelOptions]="{standalone: true}" placeholder="Password">
 										</div>
 										<!-- <p class="mb-3 text-right"><a href="forgot.html">Forgot Password</a></p> -->
 										<div class="submit">
