--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,10 +1,11 @@
 <nav class="navbar navbar-expand-lg main-navbar">
   <a class="header-brand" href="index.html">
-    <img src="../../../assets/img/brand/logo-white.png" class="header-brand-img" alt="Splite-Admin  logo">
+    <!-- <img src="../../../assets/img/brand/logo-white.png" class="header-brand-img" alt="Splite-Admin  logo"> -->
+    <h2 class="header-brand-img " style="color:beige !important; margin-top:25px ; margin-left:-5px;">MLM</h2>
   </a>
   <form class="form-inline mr-auto">
     <ul class="navbar-nav mr-2">
-      <li><a href="#" data-toggle="sidebar" class="nav-link nav-link toggle"><i class="fa fa-reorder"></i></a></li>
+      <li><a  data-toggle="sidebar" class="nav-link nav-link toggle"></a></li>
       <li><a href="#" data-toggle="search" class="nav-link nav-link d-md-none navsearch"><i class="fa fa-search"></i></a></li>
     </ul>
     <div class="search-element mr-3">
@@ -170,9 +171,7 @@
       </div>
     </li>
     <li class="dropdown dropdown-list-toggle d-none d-lg-block">
-      <a href="#" class="nav-link nav-link-lg full-screen-link">
-        <i class="fa fa-expand " id="fullscreen-button"></i>
-      </a>
+   
     </li>
     <li class="dropdown"><a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg d-flex">
         <span class="mr-3 mt-2 d-none d-lg-block ">
@@ -192,7 +191,7 @@
         <a class="dropdown-item" href="#"><i class="fe fe-calendar mr-2"></i> <span>Activity</span></a>
         <a class="dropdown-item" href="#"><i class="mdi mdi-compass-outline mr-2"></i> <span>Support</span></a>
         <div class="dropdown-divider"></div><a class="dropdown-item" href="login.html"><i class="mdi  mdi-logout-variant mr-2"></i>
-          <span>Logout</span></a>
+          <span routerLink="/login">Logout</span></a>
       </div>
     </li>
   </ul>
